fix all task button alignment

--- a/app/assets/stylesheets/scss/redesign/_sales_dashboard.scss
+++ b/app/assets/stylesheets/scss/redesign/_sales_dashboard.scss
@@ -2186,3 +2186,10 @@ canvas {
 .dropdown-toggle{
   cursor: pointer;
 }
+.sales-form-inline{
+  display: flex;
+  margin-left: -70px;
+  .btn{
+    height: 38px;
+  }
+}
